--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1347,6 +1347,68 @@ section.lazy-placeholder:after {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
+.cid-uaun86b6zq {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-uaun86b6zq .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-uaun86b6zq .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-uaun86b6zq .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-uaun86b6zq .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-uaun86b6zq .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #972424;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-uaun86b6zq .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-uaun86b6zq .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-uaun86b6zq .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-uaun86b6zq .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #972424 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
 .cid-rl9EmhGxVT {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -1917,6 +1979,62 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-u3JLIeykdG P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-u8JGIFE1r2 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-u8JGIFE1r2 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-u8JGIFE1r2 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-u8JGIFE1r2 .card-box {
+  padding-top: 2rem;
+}
+.cid-u8JGIFE1r2 .card-wrapper {
+  height: 100%;
+}
+.cid-u8JGIFE1r2 .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-u8JGIFE1r2 P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-uejMDJeLzB {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-uejMDJeLzB h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-uejMDJeLzB p {
+  color: #767676;
+  text-align: left;
+}
+.cid-uejMDJeLzB .card-box {
+  padding-top: 2rem;
+}
+.cid-uejMDJeLzB .card-wrapper {
+  height: 100%;
+}
+.cid-uejMDJeLzB .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-uejMDJeLzB P {
   color: #ffffff;
   text-align: center;
 }
