--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1029,7 +1029,7 @@ section.lazy-placeholder:after {
   color: #232323;
 }
 .cid-rn6iC4ULb3 H1 {
-  color: #bf1515;
+  color: #972424;
 }
 .cid-rn6iC4ULb3 H3 {
   color: #972424;
@@ -1045,6 +1045,18 @@ section.lazy-placeholder:after {
 }
 .cid-sb7I9T0rFE H2 {
   color: #972424;
+}
+.cid-scCSI2MP92 {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background-color: #972424;
+}
+.cid-scCSI2MP92 .mbr-section-subtitle {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-scCSI2MP92 H2 {
+  color: #ffffff;
 }
 .cid-sqFyMNnDRq {
   background: #ffffff;
@@ -1073,7 +1085,7 @@ section.lazy-placeholder:after {
 .cid-qCMoGEh2iY {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #ffffff;
+  background-color: #972424;
 }
 .cid-qCMoGEh2iY h2 {
   text-align: center;
@@ -1147,11 +1159,12 @@ section.lazy-placeholder:after {
 }
 .cid-qCMoGEh2iY .mbr-section-text {
   text-align: left;
+  color: #ffffff;
 }
 .cid-rP57opZpQM {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #ffffff;
+  background-color: #972424;
 }
 .cid-rP57opZpQM h4 {
   text-align: left;
@@ -1192,17 +1205,54 @@ section.lazy-placeholder:after {
 .cid-rP57opZpQM .card-title,
 .cid-rP57opZpQM .card-img {
   text-align: left;
+  color: #ffffff;
 }
-.cid-scCSI2MP92 {
-  padding-top: 15px;
-  padding-bottom: 60px;
+.cid-rP57opZpQM P {
+  color: #ffffff;
+}
+.cid-ug3AohuhwK {
+  padding-top: 30px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-scCSI2MP92 .mbr-section-subtitle {
-  color: #767676;
-  text-align: left;
+.cid-ug3AohuhwK h3 {
+  font-weight: 300;
 }
-.cid-scCSI2MP92 H2 {
+.cid-ug3AohuhwK .card-img {
+  width: initial;
+}
+.cid-ug3AohuhwK .card-img .mbr-iconfont {
+  font-size: 48px;
+  padding-right: 1rem;
+}
+.cid-ug3AohuhwK .media-container-row {
+  word-wrap: break-word;
+  padding-bottom: 2rem;
+  min-height: 100%;
+}
+.cid-ug3AohuhwK .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-ug3AohuhwK .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-ug3AohuhwK .mbr-text {
+  color: #767676;
+}
+.cid-ug3AohuhwK .media-container-column {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-ug3AohuhwK .mbr-al-i-c {
+  align-items: center;
+}
+.cid-ug3AohuhwK .mbr-section-title {
+  color: #972424;
+}
+.cid-ug3AohuhwK .card-title {
   color: #972424;
 }
 .cid-sPNRz5zUWh {
@@ -2629,103 +2679,81 @@ section.lazy-placeholder:after {
     padding: 0 2rem 2rem 2rem !important;
   }
 }
-.cid-ufXYDUUI7u {
+.cid-ug2n2Oxp6h {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-ufXYDUUI7u .showAlerts {
-  display: block !important;
+.cid-ug2n2Oxp6h .mbr-iconfont {
+  font-size: 48px;
+  padding-right: 1rem;
 }
-.cid-ufXYDUUI7u .rowflexrev {
-  display: -webkit-flex;
+.cid-ug2n2Oxp6h .icon-block {
+  margin-bottom: 10px;
 }
-.cid-ufXYDUUI7u .title {
-  margin-bottom: 2rem;
+.cid-ug2n2Oxp6h .icon-block .icon-block__icon {
+  display: inline-block;
+  vertical-align: middle;
 }
-.cid-ufXYDUUI7u .mbr-section-subtitle {
+.cid-ug2n2Oxp6h .icon-block .icon-block__title {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0;
+  line-height: 1;
+  font-style: italic;
+}
+.cid-ug2n2Oxp6h .mbr-text {
   color: #767676;
 }
-.cid-ufXYDUUI7u textarea.form-control {
-  min-height: 188px;
+.cid-ug2n2Oxp6h textarea.form-control {
+  min-height: 100px;
 }
-.cid-ufXYDUUI7u LABEL {
-  color: #232323;
-  display: initial;
+.cid-ug2n2Oxp6h a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
 }
-.cid-ufXYDUUI7u .mbr-section-terms {
+.cid-ug2n2Oxp6h .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-ug2n2Oxp6h .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-ug2n2Oxp6h .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
   text-align: center;
-  color: #232323;
-  margin-bottom: 0px;
+  top: 50%;
+  width: 100%;
 }
-.cid-ufXYDUUI7u .mbr-section-labels {
-  color: #232323;
-  padding: 0;
-  margin-bottom: .357em;
-  text-align: left;
+.cid-ug2n2Oxp6h .google-map[data-state] {
+  background: #e9e5dc;
 }
-.cid-ufXYDUUI7u .mbr-section-autorespond {
-  text-align: left;
-  color: #232323;
-  margin-bottom: 0px;
+.cid-ug2n2Oxp6h .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
-.cid-ufXYDUUI7u .mbr-section-gdpr {
-  text-align: left;
-  color: #232323;
-  margin-bottom: 0px;
+@media (max-width: 767px) {
+  .cid-ug2n2Oxp6h h2 {
+    padding-top: 2rem;
+  }
 }
-.cid-ufXYDUUI7u .alert {
-  margin-bottom: 0;
+@media (min-width: 768px) {
+  .cid-ug2n2Oxp6h .container > .row > .col-md-6:first-child {
+    padding-right: 30px;
+  }
+  .cid-ug2n2Oxp6h .container > .row > .col-md-6:last-child {
+    padding-left: 30px;
+  }
 }
-.cid-ufXYDUUI7u .alert-success {
-  background-color: #70c770;
-}
-.cid-ufXYDUUI7u .alert-danger {
-  background-color: #ff4a52;
-}
-.cid-ufXYDUUI7u .btn {
-  display: inline-flex;
-}
-.cid-ufXYDUUI7u .mbr-alert-success {
-  text-align: left;
-  color: #ffffff;
-}
-.cid-ufXYDUUI7u .mbr-alert-danger {
-  text-align: left;
-  color: #ffffff;
-}
-.cid-ufXYDUUI7u .uploadBtn {
-  padding-top: 13px !important;
-  padding-left: 12.5px !important;
-}
-.cid-ufXYDUUI7u input[type=file]::file-selector-button {
-  border: 1px solid #232323 !important;
-  padding: .2em .4em;
-  border-radius: .2em;
-  background-color: #cccccc !important;
-  color: #232323 !important;
-  transition: 0.3s;
-}
-.cid-ufXYDUUI7u input[type=file]::-webkit-file-upload-button {
-  border: 1px solid #232323 !important;
-  padding: .2em .4em;
-  border-radius: .2em;
-  background-color: #cccccc !important;
-  color: #232323 !important;
-  transition: 0.3s;
-}
-.cid-ufXYDUUI7u input[type=file]::-ms-browse {
-  border: 1px solid #232323 !important;
-  padding: .2em .4em;
-  border-radius: .2em;
-  background-color: #cccccc !important;
-  color: #232323 !important;
-  transition: 0.3s;
-}
-.cid-ufXYDUUI7u input,
-.cid-ufXYDUUI7u option,
-.cid-ufXYDUUI7u textarea {
-  color: #000000;
+.cid-ug2n2Oxp6h .icon-block,
+.cid-ug2n2Oxp6h .icon-block .icon-block__title {
+  color: #972424;
 }
 .cid-rjXYsZwOmF {
   padding-top: 0px;
