--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1047,8 +1047,8 @@ section.lazy-placeholder:after {
   color: #972424;
 }
 .cid-scCSI2MP92 {
-  padding-top: 15px;
-  padding-bottom: 60px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #972424;
 }
 .cid-scCSI2MP92 .mbr-section-subtitle {
@@ -1469,6 +1469,116 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rl9EmhGxVT .mbr-text P {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ugdUmJS1Tk {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-ugdUmJS1Tk .mbr-text,
+.cid-ugdUmJS1Tk blockquote {
+  color: #767676;
+}
+.cid-ugdUmJS1Tk .mbr-text P {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ugdUC4i2V1 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-ugdUC4i2V1 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-ugdUC4i2V1 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-ugdUC4i2V1 .card-box {
+  padding-top: 2rem;
+}
+.cid-ugdUC4i2V1 .card-wrapper {
+  height: 100%;
+}
+.cid-ugdUC4i2V1 .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ugdUC4i2V1 P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-ugdWdfbew4 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-ugdWdfbew4 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-ugdWdfbew4 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-ugdWdfbew4 .card-box {
+  padding-top: 2rem;
+}
+.cid-ugdWdfbew4 .card-wrapper {
+  height: 100%;
+}
+.cid-ugdWdfbew4 .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ugdWdfbew4 P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-ugdXUJYtPM {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-ugdXUJYtPM h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-ugdXUJYtPM p {
+  color: #767676;
+  text-align: left;
+}
+.cid-ugdXUJYtPM .card-box {
+  padding-top: 2rem;
+}
+.cid-ugdXUJYtPM .card-wrapper {
+  height: 100%;
+}
+.cid-ugdXUJYtPM .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ugdXUJYtPM P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-ugdZ9Tfvcq {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-ugdZ9Tfvcq .mbr-text,
+.cid-ugdZ9Tfvcq blockquote {
+  color: #767676;
+}
+.cid-ugdZ9Tfvcq .mbr-text P {
   text-align: center;
   color: #ffffff;
 }
@@ -2004,90 +2114,6 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
-.cid-u3JLIeykdG {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #972424;
-}
-.cid-u3JLIeykdG h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-u3JLIeykdG p {
-  color: #767676;
-  text-align: left;
-}
-.cid-u3JLIeykdG .card-box {
-  padding-top: 2rem;
-}
-.cid-u3JLIeykdG .card-wrapper {
-  height: 100%;
-}
-.cid-u3JLIeykdG .card-title {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-u3JLIeykdG P {
-  color: #ffffff;
-  text-align: center;
-}
-.cid-u8JGIFE1r2 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #972424;
-}
-.cid-u8JGIFE1r2 h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-u8JGIFE1r2 p {
-  color: #767676;
-  text-align: left;
-}
-.cid-u8JGIFE1r2 .card-box {
-  padding-top: 2rem;
-}
-.cid-u8JGIFE1r2 .card-wrapper {
-  height: 100%;
-}
-.cid-u8JGIFE1r2 .card-title {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-u8JGIFE1r2 P {
-  color: #ffffff;
-  text-align: center;
-}
-.cid-uejMDJeLzB {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #972424;
-}
-.cid-uejMDJeLzB h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-uejMDJeLzB p {
-  color: #767676;
-  text-align: left;
-}
-.cid-uejMDJeLzB .card-box {
-  padding-top: 2rem;
-}
-.cid-uejMDJeLzB .card-wrapper {
-  height: 100%;
-}
-.cid-uejMDJeLzB .card-title {
-  text-align: center;
-  color: #ffffff;
-}
-.cid-uejMDJeLzB P {
-  color: #ffffff;
-  text-align: center;
-}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
@@ -2215,6 +2241,34 @@ section.lazy-placeholder:after {
 }
 .cid-ufY30NyMhM .copyright > p {
   color: #972424;
+}
+.cid-Fj3Wu1SRrV .hidden {
+  display: none;
+}
+.cid-Fj3Wu1SRrV .floating-bar {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #7f1933;
+  color: #ffffff;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 2px 2px #999;
+  transition: 0.3s;
+  z-index: 99999;
+}
+.cid-Fj3Wu1SRrV .floating-bar:hover {
+  background-color: #972424;
+}
+.cid-Fj3Wu1SRrV .floating-button {
+  color: #ffffff;
+}
+.cid-Fj3Wu1SRrV .valign {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .cid-qCKAAxcHkv .navbar {
   background: #ffffff;
@@ -2756,8 +2810,8 @@ section.lazy-placeholder:after {
   color: #972424;
 }
 .cid-rjXYsZwOmF {
-  padding-top: 0px;
-  padding-bottom: 45px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #972424;
 }
 .cid-rjXYsZwOmF .mbr-section-subtitle {
