--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2114,6 +2114,62 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-uAyhWfjmWJ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-uAyhWfjmWJ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-uAyhWfjmWJ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-uAyhWfjmWJ .card-box {
+  padding-top: 2rem;
+}
+.cid-uAyhWfjmWJ .card-wrapper {
+  height: 100%;
+}
+.cid-uAyhWfjmWJ .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-uAyhWfjmWJ P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-uDQ0wOrFgM {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-uDQ0wOrFgM h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-uDQ0wOrFgM p {
+  color: #767676;
+  text-align: left;
+}
+.cid-uDQ0wOrFgM .card-box {
+  padding-top: 2rem;
+}
+.cid-uDQ0wOrFgM .card-wrapper {
+  height: 100%;
+}
+.cid-uDQ0wOrFgM .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-uDQ0wOrFgM P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
