--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2170,6 +2170,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-uYuRWvUQjZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-uYuRWvUQjZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-uYuRWvUQjZ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-uYuRWvUQjZ .card-box {
+  padding-top: 2rem;
+}
+.cid-uYuRWvUQjZ .card-wrapper {
+  height: 100%;
+}
+.cid-uYuRWvUQjZ .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-uYuRWvUQjZ P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
